<?xml version="1.0"?>
<package format="2">
  <name>iop_client_pantilt_specification_service_fkie</name>
  <version>2.1.0</version>
  <description>The client services for Pantilt specification and motion profile</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">ttps://github.com/fkie/iop_jaus_manipulator_clients</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>iop_component_fkie</depend>
  <depend>iop_ocu_slavelib_fkie</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
