<?xml version="1.0"?>
<package>
  <name>iop_client_primitive_manipulator_fkie</name>
  <version>2.0.0</version>
  <description>The client service for primitive manipulator service </description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">ttps://github.com/fkie/iop_jaus_manipulator_clients</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>iop_client_manipulator_specification_fkie</build_depend>
  <build_depend>iop_ocu_slavelib_fkie</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>iop_client_manipulator_specification_fkie</run_depend>
  <run_depend>iop_ocu_slavelib_fkie</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>